[gd_scene load_steps=9 format=1]

[ext_resource path="res://scritps/between_round_shop.gd" type="Script" id=1]
[ext_resource path="res://fonts/pirulen/pirulen_48.fnt" type="Font" id=2]
[ext_resource path="res://fonts/pirulen/pirulen_32.fnt" type="Font" id=3]
[ext_resource path="res://fonts/sunvox-1.9.1/exo_light_12.fnt" type="Font" id=4]
[ext_resource path="res://fonts/pirulen/pirulen_16.fnt" type="Font" id=5]
[ext_resource path="res://sfx/click_converted.wav" type="Sample" id=6]
[ext_resource path="res://sfx/error_click_converted.wav" type="Sample" id=7]

[sub_resource type="SampleLibrary" id=1]

samples/click = { "db":0.0, "pitch":1.0, "sample":ExtResource( 6 ) }
samples/error_click = { "db":0.0, "pitch":1.0, "sample":ExtResource( 7 ) }

[node name="shop" type="Node2D"]

transform/pos = Vector2( 146.261, -7.75625 )
script/script = ExtResource( 1 )

[node name="shop_title" type="Label" parent="."]

margin/left = -49.0
margin/top = 77.0
margin/right = 136.0
margin/bottom = 125.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "Shop"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="start_round_button" type="Button" parent="."]

margin/left = -6.0
margin/top = 426.0
margin/right = 491.0
margin/bottom = 480.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
text = "Enter Round"
flat = false

[node name="upgrade_health" type="Button" parent="."]

margin/left = -54.0
margin/top = 154.0
margin/right = 42.0
margin/bottom = 175.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
text = "Upgrade Health"
flat = false

[node name="upgrade_speed" type="Button" parent="."]

margin/left = -55.0
margin/top = 181.0
margin/right = 50.0
margin/bottom = 202.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
text = "upgrade speed"
flat = false

[node name="upgrade_fire_damage" type="Button" parent="."]

margin/left = -54.0
margin/top = 293.0
margin/right = 88.0
margin/bottom = 307.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
text = "Updrage Fire Damage"
flat = false

[node name="reduce_fire_self_damage" type="Button" parent="."]

margin/left = -54.0
margin/top = 267.0
margin/right = 111.0
margin/bottom = 284.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
text = "Reduce Fire Self Damage"
flat = false

[node name="reduce_fire_cooldown" type="Button" parent="."]

margin/left = -54.0
margin/top = 214.0
margin/right = 97.0
margin/bottom = 233.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
text = "Reduce Fire Cooldown"
flat = false

[node name="increase_fire_duration" type="Button" parent="."]

margin/left = -54.0
margin/top = 242.0
margin/right = 99.0
margin/bottom = 259.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
text = "Increase Fire Duration"
flat = false

[node name="upgrade_water_damage" type="Button" parent="."]

margin/left = 189.0
margin/top = 147.0
margin/right = 330.0
margin/bottom = 170.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
text = "Upgrade Water Damage"
flat = false

[node name="increace_water_speed" type="Button" parent="."]

margin/left = 189.0
margin/top = 178.0
margin/right = 327.0
margin/bottom = 199.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
text = "Increase Water Speed"
flat = false

[node name="reduce_water_cooldown" type="Button" parent="."]

margin/left = 189.0
margin/top = 208.0
margin/right = 339.0
margin/bottom = 229.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
text = "Reduce water cooldown"
flat = false

[node name="increace_water_duration" type="Button" parent="."]

margin/left = 189.0
margin/top = 240.0
margin/right = 340.0
margin/bottom = 261.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
text = "Increase Water Duration"
flat = false

[node name="increase_earth_self_heal" type="Button" parent="."]

margin/left = -54.0
margin/top = 381.0
margin/right = 87.0
margin/bottom = 400.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
text = "Increase Earth Heal"
flat = false

[node name="reduce_earth_cooldown" type="Button" parent="."]

margin/left = -54.0
margin/top = 354.0
margin/right = 112.0
margin/bottom = 373.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
text = "Reduce Earth Cooldown"
flat = false

[node name="increase_earth_duartion" type="Button" parent="."]

margin/left = -54.0
margin/top = 330.0
margin/right = 114.0
margin/bottom = 347.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
text = "Increase Earth Duration"
flat = false

[node name="upgrade_air_damage" type="Button" parent="."]

margin/left = 189.0
margin/top = 289.0
margin/right = 318.0
margin/bottom = 310.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
text = "Upgrade Air Damage"
flat = false

[node name="increase_air_speed" type="Button" parent="."]

margin/left = 189.0
margin/top = 316.0
margin/right = 301.0
margin/bottom = 337.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
text = "Increse Air Speed"
flat = false

[node name="reduce_air_cooldown" type="Button" parent="."]

margin/left = 189.0
margin/top = 345.0
margin/right = 324.0
margin/bottom = 366.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
text = "Reduce Air Cooldown"
flat = false

[node name="increase_air_duration" type="Button" parent="."]

margin/left = 189.0
margin/top = 376.0
margin/right = 321.0
margin/bottom = 397.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
text = "Increase Air Duration"
flat = false

[node name="points" type="Label" parent="."]

margin/left = 372.0
margin/top = 105.0
margin/right = 659.0
margin/bottom = 137.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 5 )
text = "Points To Spend"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="point_number" type="Label" parent="."]

margin/left = 434.0
margin/top = 130.0
margin/right = 474.0
margin/bottom = 147.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 5 )
text = "5"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="round" type="Label" parent="."]

margin/left = 416.0
margin/top = 186.0
margin/right = 497.0
margin/bottom = 203.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 5 )
text = "Round"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="round_number" type="Label" parent="."]

margin/left = 432.0
margin/top = 213.0
margin/right = 472.0
margin/bottom = 230.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 5 )
text = "5"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score" type="Label" parent="."]

margin/left = 419.0
margin/top = 277.0
margin/right = 494.0
margin/bottom = 294.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 5 )
text = "Score"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score_number" type="Label" parent="."]

margin/left = 436.0
margin/top = 299.0
margin/right = 476.0
margin/bottom = 316.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 5 )
text = "5"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0


